--- a/src/app/function/image-list/image-item/image-item.component.html
+++ b/src/app/function/image-list/image-item/image-item.component.html
@@ -1,18 +1,20 @@
-<a
-  style="cursor: pointer;"
-  [routerLink]="[index]"
-  routerLinkActive="active"
-  class="list-group-item clearfix">
-  <div class="pull-left">
-    <h4 class="list-group-item-heading">{{ image.name }}</h4>
-    <p class="list-group-item-text">{{ image.description }}</p>
-  </div>
-  <span class="pull-right">
-    <img
-      [src]="image.imagePath"
-      alt="{{ image.name }}"
-      class="img-responsive"
-      style="max-height: 50px;">
-  </span>
-</a>
+<div id="imageItem">
+  <a
+    style="cursor: pointer;"
+    [routerLink]="[index]"
+    routerLinkActive="active"
+    class="list-group-item clearfix">
+    <div class="pull-left">
+      <h4 class="list-group-item-heading">{{ image.name }}</h4>
+      <p class="list-group-item-text">{{ image.description }}</p>
+    </div>
+    <span class="pull-right">
+      <img
+        [src]="image.imagePath"
+        alt="{{ image.name }}"
+        class="img-responsive"
+        style="max-height: 50px; max-width: 50px;">
+    </span>
+  </a>
+</div>
 
